<resources>
    <string name="app_name">Module_order</string>
    <string name="order_detail">订单详情</string>
    <string name="basic_info">基本信息</string>
    <string name="transport_time">货运时间</string>
    <string name="freight">运费</string>
    <string name="oil_pay">油款</string>
    <string name="place_of_pick_up_goods">提货地名称：</string>
    <string name="contact_of_pick_up_goods">提货联系人：</string>
    <string name="place_of_unload">卸货地名称：</string>
    <string name="order_id">订单编号：</string>
    <string name="contact_of_unload">卸货联系人：</string>
    <string name="name_of_goods">货物名称：</string>
    <string name="weight_of_goods">货物重量 (公斤)：</string>
    <string name="gps_num">GPS号码：</string>
    <string name="transport_num">货运班次：</string>
    <string name="time_of_plan_upload">计划装货时间：</string>
    <string name="time_plan_start_time">计划出发时间：</string>
    <string name="time_plan_end_time">计划到达时间：</string>
    <string name="driver_freight">司机运费：</string>
    <string name="driver_freight_actual">司机运费实际支付：</string>
    <string name="pre_pay">预付款：</string>
    <string name="actual_pre_pay">预付款实际支付：</string>
    <string name="accept_order">接受订单</string>
    <string name="reject_order">拒绝订单</string>
    <string name="other_charges">其他费用</string>
    <string name="additional_charges">额外费用</string>
    <string name="over_weight_charges">超重费用</string>
    <string name="delay_unload_charges">压车费：</string>
    <string name="deduct_charges">扣款费用</string>
    <string name="good_info">货物信息</string>
    <string name="not_arrive_at_time">未按时送达：</string>
    <string name="not_operate_as_required">未按要求操作：</string>
    <string name="schedule_record">业务进度记录</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="history_order">历史订单</string>
    <string name="query_order">查询订单</string>
    <string name="to">到</string>
    <string name="query">查询</string>
    <string name="execute_truck">执行车辆：</string>
    <string name="truck_driver">执行司机：</string>
    <string name="trailer_license">挂车车牌：</string>
    <string name="container_num">柜号：</string>
    <string name="look_photo"><u>查看照片</u></string>
    <string name="order_num">订单编号：</string>
    <string name="complete_date">完成日期：</string>
    <string name="freight_m">运费：</string>
    <string name="already_pay">已支付：</string>
    <string name="should_deduct">应扣：</string>
    <string name="order_status">接单状态：</string>
    <string name="start_task">启动任务</string>
    <string name="wait_reserve">等待预约</string>
    <string name="accept_again">重新接单</string>
    <string name="history_list">历史纪录</string>
    <string name="three_inspection_of_driving">行车三检</string>
    <string name="truck_licenses">车辆证件</string>
    <string name="truck_licenses_hint">出车前检查驾驶证、行驶证、营运证、保单复印件和其他必须携带的行车证件，并查验前次保修记录，了解车辆状况!</string>
    <string name="before_dispatch">出车前</string>
    <string name="normal">正常</string>
    <string name="abnormal">异常</string>
    <string name="trouble_feedback">异常反馈</string>
    <string name="driving">行车中</string>
    <string name="after_park">停车后</string>
    <string name="truck_clean_hint">清洁车身外观、驾驶室和车厢内部卫生，车身无碰撞、破损、刮痕!</string>
    <string name="truck_clean">车辆清洁</string>
    <string name="resources_inspect">辅料检查</string>
    <string name="resources_inspect_hint">润滑油、燃油、冷却水、制动液、电解液符合要求!</string>
    <string name="fix_inspect">紧固检查</string>
    <string name="fix_inspect_hint">汽车主要外露部位的螺栓、螺母装备齐全、紧固；皮带无老话、裂痕、涨紧度适中!</string>
    <string name="chassis_inspect">底盘检查</string>
    <string name="chassis_inspect_hint">转向装置和横、直拉杆等连接部位连接牢固可靠；制动器（含手制动）、离合器的工作情况良好!</string>
    <string name="electric_appliance_inspect">电器检查</string>
    <string name="electric_appliance_inspect_hint">照明、信号、喇叭、刮水器、后视镜、门锁、门窗玻璃完整有效!</string>
    <string name="meter_inspect">仪表检查</string>
    <string name="meter_inspect_hint">启动发动机预热1-3分钟运转正常，无异响；各仪表工作正常!</string>
    <string name="three_leak_inspect">三漏检查</string>
    <string name="three_leak_inspect_hint">车辆各部件无漏水、漏油、漏气现象!</string>
    <string name="truck_equipment">随车装备</string>
    <string name="truck_equipment_hint">出车前检查装载货物安全可靠；随车装备（灭火器、警示牌、随车工具等）齐全有效!</string>
    <string name="power_inspect">动力检查</string>
    <string name="power_inspect_hint">车辆动力输出稳定、正常、发动机无异响!</string>
    <string name="tyre_inspect">轮胎检查</string>
    <string name="tyre_inspect_hint">轮胎气压、胎纹及胎间中无杂物，轮胎无鼓包、割伤、钢圈无破损变形!</string>
    <string name="truck_park">车辆停放</string>
    <string name="truck_park_hint">放净储气筒内的积水!&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="all_normal">全部正常</string>
    <string name="not_inspect_skip">未检查,跳过</string>
    <string name="inspection_feedback">三检异常反馈</string>
    <string name="find_problem_instruction">发现问题说明</string>
    <string name="please_input_find_problem_instruction">请输入发现问题说明!</string>
    <string name="rectify_require_instruction">整改要求说明</string>
    <string name="please_input_rectify_require_instruction">请输入整改要求说明!</string>
    <string name="rectify_deadline">整改期限：</string>
    <string name="rectify_result">整改结果：</string>
    <string name="qualified">合格</string>
    <string name="unqualified">不合格</string>
    <string name="ongoing">进行中</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="transport_step">行车步骤</string>
    <string name="please_select">请选择</string>
    <string name="task">任务</string>
    <string name="task_hint">您好,请安全驾驶!</string>
    <string name="start">始</string>
    <string name="end">终</string>
    <string name="time_plan_to_pick_up_goods">计划装货：</string>
    <string name="time_latest_to_send_out_goods">最晚发货：</string>
    <string name="time_plan_to_arrive_at">计划到达：</string>
    <string name="accept_order_short">接单</string>
    <string name="reject">拒绝</string>
    <string name="has_processing_order">已经存在进行中的订单</string>
    <string name="trouble_solved">当前订单已经上报一个异常，请确认异常已经解决后再执行后续操作</string>
    <string name="please_wait_order_reserve_complete">请等待调度处理完成</string>
    <string name="contact_name">联系人：</string>
    <string name="contact_phone">联系人电话：</string>
    <string name="position_name">作业位置：</string>
</resources>
