<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/srl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/basic_white">


    <com.tengbo.commonlibrary.widget.TitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showBack="true"
        app:title="@string/order_detail"

        />

    <LinearLayout
        android:id="@+id/ll_operate_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/common_selector_text_button"
            android:gravity="center"
            android:text="@string/accept_order_short"
            android:textColor="@color/basic_blue"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:layout_weight="1"
            android:background="@drawable/common_selector_text_button"
            android:gravity="center"
            android:text="@string/reject"
            android:textColor="@color/basic_blue"
            android:textSize="@dimen/sp_14"
            android:textStyle="normal" />


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_above="@id/ll_operate_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/titleBar" />


</RelativeLayout>
